--- a/src/app/components/queue-v2/queues-v2.component.scss
+++ b/src/app/components/queue-v2/queues-v2.component.scss
@@ -23,7 +23,6 @@
     background-color: white;
     padding: 20px; /* Adjust padding to your preference */
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
-    overflow: show; /* Add scroll for overflow content */
   }
   
   .header .title-group {
@@ -51,7 +50,6 @@
     border: 1px solid #132030;
     border-radius: 5px;
     cursor: pointer;
-    overflow: show;
   }
 
   .tooltip {
